@@ -24,6 +24,9 @@ module ActiveMerchant #:nodoc:
     #   CyberSource what kind of item you are selling.  It is used when
     #   calculating tax/VAT.
     # * All transactions use dollar values.
+    # * To process pinless debit cards throught the pinless debit card
+    #   network, your Cybersource merchant account must accept pinless
+    #   debit card payments.
     class CyberSourceGateway < Gateway
       self.test_url = 'https://ics2wstest.ic3.com/commerce/1.x/transactionProcessor'
       self.live_url = 'https://ics2ws.ic3.com/commerce/1.x/transactionProcessor'
@@ -132,6 +135,7 @@ module ActiveMerchant #:nodoc:
 
       # Purchase is an auth followed by a capture
       # You must supply an order_id in the options hash
+      # options[:pinless_debit_card] => true # attempts to process as pinless debit card
       def purchase(money, payment_method_or_reference, options = {})
         requires!(options, :order_id)
         setup_address_hash(options)
@@ -212,6 +216,12 @@ module ActiveMerchant #:nodoc:
         commit(build_tax_calculation_request(creditcard, options), options)
       end
 
+      # Determines if a card can be used for Pinless Debit Card transactions
+      def validate_pinless_debit_card(creditcard, options = {})
+        requires!(options, :order_id)
+        commit(build_validate_pinless_debit_request(creditcard,options), options)
+      end
+
       private
 
       # Create all address hash key value pairs so that we still function if we
@@ -258,7 +268,7 @@ module ActiveMerchant #:nodoc:
           add_check_service(xml)
         else
           add_purchase_service(xml, options)
-          add_business_rules_data(xml)
+          add_business_rules_data(xml) unless options[:pinless_debit_card]
         end
         xml.target!
       end
@@ -346,6 +356,13 @@ module ActiveMerchant #:nodoc:
         xml = Builder::XmlMarkup.new :indent => 2
         add_subscription(xml, options, reference)
         add_subscription_retrieve_service(xml, options)
+        xml.target!
+      end
+
+      def build_validate_pinless_debit_request(creditcard,options)
+        xml = Builder::XmlMarkup.new :indent => 2
+        add_creditcard(xml, creditcard)
+        add_validate_pinless_debit_service(xml)
         xml.target!
       end
 
@@ -441,8 +458,12 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_purchase_service(xml, options)
-        xml.tag! 'ccAuthService', {'run' => 'true'}
-        xml.tag! 'ccCaptureService', {'run' => 'true'}
+        if options[:pinless_debit_card]
+          xml.tag! 'pinlessDebitService', {'run' => 'true'}
+        else
+          xml.tag! 'ccAuthService', {'run' => 'true'}
+          xml.tag! 'ccCaptureService', {'run' => 'true'}
+        end
       end
 
       def add_void_service(xml, request_id, request_token)
@@ -533,6 +554,10 @@ module ActiveMerchant #:nodoc:
           add_purchase_data(xml, money, true, options)
           add_creditcard(xml, payment_method_or_reference)
         end
+      end
+
+      def add_validate_pinless_debit_service(xml)
+        xml.tag!'pinlessDebitValidateService', {'run' => 'true'}
       end
 
       # Where we actually build the full SOAP request using builder
